--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -1,3 +1,13 @@
+name: Upload Python Package To Pypi
+
+on:
+  workflow_dispatch:
+  release:
+    types: [published]
+
+permissions:
+  contents: read
+
 jobs:
   release-build:
     runs-on: ubuntu-latest
@@ -13,7 +23,6 @@ jobs:
         run: |
           python -m pip install build
           python -m build
-
       - name: upload dists
         uses: actions/upload-artifact@v4
         with:
