Add package exclusion for tests in setuptools
Exclude test-related packages from setuptools.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,3 +48,6 @@ Homepage = "https://github.com/iQLS-MMS/hic-sca"
 
 [tool.setuptools]
 packages = ["hicsca",]
+
+[tool.setuptools.packages.find]
+exclude = ["tests*", "test_data*"]
