--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "hic-sca"
-version = "0.1.0"
+dynamic = ["version"]
 description = "HiC-SCA: Hi-C Spectral Compartment Assignment for predicting A-B chromosomal compartments"
 readme = "README.md"
 requires-python = ">=3.10"
@@ -48,6 +48,3 @@ Homepage = "https://github.com/iQLS-MMS/hic-sca"
 
 [tool.setuptools]
 packages = ["hicsca",]
-
-[tool.setuptools.packages.find]
-exclude = ["tests*", "test_data*"]
