--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,11 @@ classifiers = [
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
-    "Operating System :: OS Independent",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
+    "Programming Language :: Python :: 3.14",
+    "Operating System :: MacOS :: MacOS X",
+    "Operating System :: POSIX :: Linux",
 ]
 
 dependencies = [
@@ -37,7 +41,6 @@ dependencies = [
 [project.optional-dependencies]
 tests = [
     "pytest>=6.0",
-    "pytest-cov>=2.0"
 ]
 
 [project.scripts]
